Navigation Bart HTML

--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -10,6 +10,20 @@
     <title>Coding Club</title>
 </head>
 <body>
+    <!-- Navigation Bar Start -->
+
+    <nav>
+        <div class="nav-left">
+            <p>CODING CLUB</p>
+        </div>
+        <div class="nav-right">
+        <a href="#section">About Us</a>
+        <a href="#form">Sign Up</a>
+        <a href="#footer">Contact</a>
+        </div>
+    </nav>
+
+    <!-- Navigation Bar End -->
 
 </body>
 </html>
