Header Section Intro HTML

--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -25,5 +25,24 @@
 
     <!-- Navigation Bar End -->
 
+
+    <!-- Header Section Intro Start -->
+
+    <header>
+        <div class="header-left">
+            <img
+                src="https://images.pexels.com/photos/4709290/pexels-photo-4709290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="Header Image 'The Kid's Coding'">
+        </div>
+        <div class="header-right-container">
+            <div class="header-right">
+
+                <h1>Coding Club</h1>
+                <p>Join our kids coding club for ages 8 to 18!</p>
+            </div>
+        </div>
+    </header>
+
+    <!-- Header Section Intro End -->
 </body>
 </html>
