--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -44,5 +44,54 @@
     </header>
 
     <!-- Header Section Intro End -->
+
+
+    <!-- About Section Start -->
+
+    <section id="section">
+        <div class="section-title">
+            <h2>About us</h2>
+            <p>Learn how to solve coding puzzles, build games, and program
+                robots!</p>
+        </div>
+        <div class="section-offer">
+            <p>We offer:</p>
+            <ul>
+                <li>Weekly club meetings for different age groups</li>
+                <li>Learn how to think logicallz from a young age</li>
+                <li>Build games with your own code</li>
+                <li>Program robots to follow commands</li>
+                <li>Pick up a cool valuable skill while having fun!</li>
+            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Ages</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Fri</td>
+                        <td>16:00</td>
+                        <td>8 - 12</td>
+                    </tr>
+                    <tr>
+                        <td>Sat</td>
+                        <td>11:00</td>
+                        <td>13 - 15</td>
+                    </tr>
+                    <tr>
+                        <td>Sun</td>
+                        <td>15:00</td>
+                        <td>16 - 18</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+    <!-- About Section End -->
 </body>
 </html>
