Sign Up Form HTML

--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -1,97 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap"
+      rel="stylesheet"
+    />
     <title>Coding Club</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navigation Bar Start -->
 
     <nav>
-        <div class="nav-left">
-            <p>CODING CLUB</p>
-        </div>
-        <div class="nav-right">
+      <div class="nav-left">
+        <p>CODING CLUB</p>
+      </div>
+      <div class="nav-right">
         <a href="#section">About Us</a>
         <a href="#form">Sign Up</a>
         <a href="#footer">Contact</a>
-        </div>
+      </div>
     </nav>
 
     <!-- Navigation Bar End -->
 
-
     <!-- Header Section Intro Start -->
 
     <header>
-        <div class="header-left">
-            <img
-                src="https://images.pexels.com/photos/4709290/pexels-photo-4709290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                alt="Header Image 'The Kid's Coding'">
+      <div class="header-left">
+        <img
+          src="https://images.pexels.com/photos/4709290/pexels-photo-4709290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="Header Image 'The Kid's Coding'"
+        />
+      </div>
+      <div class="header-right-container">
+        <div class="header-right">
+          <h1>Coding Club</h1>
+          <p>Join our kids coding club for ages 8 to 18!</p>
         </div>
-        <div class="header-right-container">
-            <div class="header-right">
-
-                <h1>Coding Club</h1>
-                <p>Join our kids coding club for ages 8 to 18!</p>
-            </div>
-        </div>
+      </div>
     </header>
 
     <!-- Header Section Intro End -->
 
-
     <!-- About Section Start -->
 
     <section id="section">
-        <div class="section-title">
-            <h2>About us</h2>
-            <p>Learn how to solve coding puzzles, build games, and program
-                robots!</p>
-        </div>
-        <div class="section-offer">
-            <p>We offer:</p>
-            <ul>
-                <li>Weekly club meetings for different age groups</li>
-                <li>Learn how to think logicallz from a young age</li>
-                <li>Build games with your own code</li>
-                <li>Program robots to follow commands</li>
-                <li>Pick up a cool valuable skill while having fun!</li>
-            </ul>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Day</th>
-                        <th>Time</th>
-                        <th>Ages</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Fri</td>
-                        <td>16:00</td>
-                        <td>8 - 12</td>
-                    </tr>
-                    <tr>
-                        <td>Sat</td>
-                        <td>11:00</td>
-                        <td>13 - 15</td>
-                    </tr>
-                    <tr>
-                        <td>Sun</td>
-                        <td>15:00</td>
-                        <td>16 - 18</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+      <div class="section-title">
+        <h2>About us</h2>
+        <p>
+          Learn how to solve coding puzzles, build games, and program robots!
+        </p>
+      </div>
+      <div class="section-offer">
+        <p>We offer:</p>
+        <ul>
+          <li>Weekly club meetings for different age groups</li>
+          <li>Learn how to think logicallz from a young age</li>
+          <li>Build games with your own code</li>
+          <li>Program robots to follow commands</li>
+          <li>Pick up a cool valuable skill while having fun!</li>
+        </ul>
+        <table>
+          <thead>
+            <tr>
+              <th>Day</th>
+              <th>Time</th>
+              <th>Ages</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Fri</td>
+              <td>16:00</td>
+              <td>8 - 12</td>
+            </tr>
+            <tr>
+              <td>Sat</td>
+              <td>11:00</td>
+              <td>13 - 15</td>
+            </tr>
+            <tr>
+              <td>Sun</td>
+              <td>15:00</td>
+              <td>16 - 18</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
 
     <!-- About Section End -->
-</body>
+
+    <!-- Form Section Start -->
+
+    <form id="form">
+      <div class="form-title">
+        <h2>Sign up!</h2>
+        <h4>10 classes for &euro;40</h4>
+      </div>
+      <div class="form-inputs">
+        <!-- Child's Name -->
+        <label for="child">Child's Name</label>
+        <input type="text" />
+
+        <!-- Parent / Guardian's Name -->
+        <label for="parent">Parent/Guardian's Name</label>
+        <input type="text" />
+
+        <!-- Email -->
+        <label for="email">Contact Email</label>
+        <input type="email" name="email" />
+
+        <button>Submit</button>
+      </div>
+    </form>
+
+    <!-- Form Section End -->
+  </body>
 </html>
