--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -121,5 +121,30 @@
     </form>
 
     <!-- Form Section End -->
+
+    <!-- Footer Start -->
+
+    <footer id="footer">
+      <h3>Contact Us!</h3>
+      <div>
+        <small>Got a question? Get in touch!</small>
+        <p>012 345 6789 | info@codingclub.net</p>
+        <p>Coding club, 1 High Street, Dublin</p>
+      </div>
+
+      <div class="footer-icons">
+        <a href="https://www.facebook.com/">
+          <img class="icon" src="facebook.png" alt />
+        </a>
+        <a href="https://twitter.com/">
+          <img class="icon" src="twitter.png" alt />
+        </a>
+        <a href="https://www.instagram.com/">
+          <img class="icon ig" src="instagram.png" alt />
+        </a>
+      </div>
+    </footer>
+
+    <!-- Footer End -->
   </body>
 </html>
