--- a/Gjorgi_Delev_Protfolio1.html
+++ b/Gjorgi_Delev_Protfolio1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Gjorgi_Delev_Protfolio1_Style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -134,13 +135,13 @@
 
       <div class="footer-icons">
         <a href="https://www.facebook.com/">
-          <img class="icon" src="facebook.png" alt />
+          <img class="icon" src="./media/facebook.png" alt />
         </a>
         <a href="https://twitter.com/">
-          <img class="icon" src="twitter.png" alt />
+          <img class="icon" src="./media/twitter.png" alt />
         </a>
         <a href="https://www.instagram.com/">
-          <img class="icon ig" src="instagram.png" alt />
+          <img class="icon ig" src="./media/instagram.png" alt />
         </a>
       </div>
     </footer>
