--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Gjorgi_Delev_Protfolio1_Style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap"
       rel="stylesheet"
+
     />
     <title>Coding Club</title>
   </head>
@@ -50,7 +49,7 @@
 
     <!-- About Section Start -->
 
-    <section id="section">
+    <main id="section">
       <div class="section-title">
         <h2>About us</h2>
         <p>
@@ -93,7 +92,7 @@
           </tbody>
         </table>
       </div>
-    </section>
+    </main>
 
     <!-- About Section End -->
 
